--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
       <div id="app"></div>
+      <div id="right"></div>
       <script src="main.js"></script>
     </body>
   </html>
