--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
   <html>
     <head>
-      <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
+
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="codemirror.css">
         <link rel="stylesheet" href="base16-light.css">
     </head>
     <body>
-      <div id="app"></div>
-      <div id="right"></div>
+      <div class="cljsfiddle-navbar">
+          <span>cljsfiddle</span>
+      </div>
+      <div class="cljsfiddle-container">
+          <div id="app"></div>
+          <div id="right"></div>
+      </div>
       <script src="main.js"></script>
     </body>
   </html>
