--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="codemirror.css">
     <link rel="stylesheet" href="base16-light.css">
+    <link rel="stylesheet" href="xterm.css" />
 </head>
 <body>
 <div class="cljsfiddle-navbar">
