--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,6 +15,6 @@
     <div id="app"></div>
     <div id="right"></div>
 </div>
-<script src="main.js"></script>
+<script src="cljs-out/dev/main_bundle.js" type="text/javascript"></script>
 </body>
 </html>
