--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,7 +13,7 @@
 </div>
 <div class="cljsfiddle-container">
     <div id="app"></div>
-    <div id="right"></div>
+    <div id="sandbox"></div>
 </div>
 <script src="cljs-out/dev/main_bundle.js" type="text/javascript"></script>
 </body>
