Add Loading... to sandbox meta

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="xterm.css" />
 </head>
 <body>
-<div class="cljsfiddle-navbar">
-    <img src="https://raw.githubusercontent.com/cljs/logo/master/cljs.svg" height="48" width="48"/>
-</div>
+<div class="cljsfiddle-navbar"></div>
 <div class="cljsfiddle-container">
     <div id="app"></div>
     <div id="sandbox"></div>
