--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,6 +13,6 @@
     <div id="app"></div>
     <div id="sandbox"></div>
 </div>
-<script src="cljs-out/dev/main_bundle.js" type="text/javascript"></script>
+<script src="cljsfiddle/main.js" type="text/javascript"></script>
 </body>
 </html>
