--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
+    <title>cljsfiddle</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="codemirror.css">
-    <link rel="stylesheet" href="base16-light.css">
     <link rel="stylesheet" href="xterm.css" />
 </head>
 <body>
@@ -13,5 +13,13 @@
     <div id="sandbox"></div>
 </div>
 <script src="cljsfiddle/main.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Hack']
+    }
+  });
+</script>
 </body>
 </html>
