--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,7 +17,7 @@
 <script>
   WebFont.load({
     google: {
-      families: ['Hack']
+      families: ['Hack', 'Helvetica Neue']
     }
   });
 </script>
