Clean up Packages UI

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="xterm.css" />
+    <link rel="stylesheet" href="github.css" />
 </head>
 <body>
 <div id="app"></div>
