--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="app"></div>
+<script src="monaco/main.js" type="text/javascript"></script>
 <script src="cljsfiddle/base.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script>
