--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="xterm.css" />
     <link rel="stylesheet" href="github.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.6.0/hint.min.css">
 </head>
 <body>
 <div id="app"></div>
