--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,16 +4,20 @@
     <title>cljsfiddle</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="xterm.css" />
-    <link rel="stylesheet" href="github.css" />
+    <link rel="stylesheet" href="/sandbox/{{sandbox-version}}/style.css">
+    <link rel="stylesheet" href="/sandbox/{{sandbox-version}}/xterm.css" />
+    <link rel="stylesheet" href="/sandbox/{{sandbox-version}}/github.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.6.0/hint.min.css">
 </head>
 <body>
 <div id="app"></div>
-<script src="monaco/main.js" type="text/javascript"></script>
-<script src="cljsfiddle/base.js" type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script src="/sandbox/{{sandbox-version}}/monaco/main.js" type="text/javascript"></script>
+<script src="/sandbox/{{sandbox-version}}/cljsfiddle/base.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+<script>
+  const opts = {{opts|json|safe}};
+  cljsfiddle.core.main(opts);
+</script>
 <script>
   WebFont.load({
     google: {
