--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/sandbox/{{sandbox-version}}/xterm.css" />
     <link rel="stylesheet" href="/sandbox/{{sandbox-version}}/github.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.6.0/hint.min.css">
+    <meta content="A ClojureScript code playground" name="description">
+    <meta content="clojure,clojurescript,sandbox,bootstrap,compiler,environment" name="keywords">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 </head>
 <body>
 <div id="app"></div>
