--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,7 +17,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 </head>
 <body>
-<div id="app"></div>
+<div id="cljspad-app"></div>
 <script src="/sandbox/{{sandbox-version}}/monaco/main.js" type="text/javascript"></script>
 <script src="/sandbox/{{sandbox-version}}/cljspad/base.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
