Drop support for copy as link

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,7 +28,7 @@
 <script>
   WebFont.load({
     google: {
-      families: ['Hack', 'Helvetica Neue']
+      families: ['Hack', 'Lato']
     }
   });
 </script>
